--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Prosys</title>
-    <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Prosys</title>
+
+    <!-- Favicon icon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
     <!-- Bootstrap Core CSS -->
     <link href="./assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="./assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
-    <link href="./assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+    <link id="tema" id="theme" rel="stylesheet">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
@@ -50,7 +51,7 @@
     <!-- ============================================================== -->
     <!-- Style switcher -->
     <!-- ============================================================== -->
-    <script src="./assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
+    <!-- <script src="./assets/plugins/styleswitcher/jQuery.style.switcher.js"></script> -->
 </body>
 
 </html>
